--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:+QeSDFjJRMv7PCAtRmKxbD+jjTBl632zp+kGUcEWNcc=
 APP_DEBUG=true
 APP_URL=http://localhost
 
