--- a/.env.example
+++ b/.env.example
@@ -11,8 +11,8 @@ LOG_LEVEL=debug
 DB_CONNECTION=pgsql
 DB_HOST=pg307.occ.local
 DB_PORT=5432
-DB_DATABASE=zinovevdv
-DB_USERNAME=zinovevdv
+DB_DATABASE=zinovev1dv
+DB_USERNAME=zinovev1dv
 DB_PASSWORD=12345
 
 BROADCAST_DRIVER=log
